// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composer > Snapshots > matches snapshot in idle state 1`] = `
" RawMarkdownIndicator                                                               ? for shortcuts
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                       StatusDisplay
InputPrompt:   Press 'i' for INSERT mode.
Footer
"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode 1`] = `
"                                                                           press tab twice for more
InputPrompt:   Press 'i' for INSERT mode.
"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode while loading 1`] = `
"                                                                           press tab twice for more
────────────────────────────────────────────────────────────────────────────────────────────────────
LoadingIndicator
InputPrompt:   Press 'i' for INSERT mode.
"
`;

exports[`Composer > Snapshots > matches snapshot in narrow view 1`] = `
" RawMarkdownIndicator   ? for shortcuts
────────────────────────────────────────
                           StatusDisplay
InputPrompt:   Press 'i' for INSERT
mode.
Footer
"
`;

exports[`Composer > Snapshots > matches snapshot while streaming 1`] = `
" RawMarkdownIndicator                                                               ? for shortcuts
────────────────────────────────────────────────────────────────────────────────────────────────────
 LoadingIndicator: Thinking                                                            StatusDisplay
InputPrompt:   Press 'i' for INSERT mode.
Footer
"
`;
